--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: php
-dist: trusty
-os: linux
+
 addons:
-  firefox: "47.0.1"
-  postgresql: "9.6"
+  postgresql: "9.5"
+
+services:
+  - mysql
+  - postgresql
+  - docker
 
 cache:
   directories:
@@ -11,22 +14,21 @@ cache:
     - $HOME/.npm
 
 php:
-  - 7.0
   - 7.2
+  - 7.3
+  - 7.4
 
 env:
   global:
-    - MOODLE_BRANCH=v3.4.4
+    - MOODLE_BRANCH=MOODLE_39_STABLE
   matrix:
     - DB=pgsql
     - DB=mysqli
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
-  - cd ../../..
-  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
+  - cd ../..
+  - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
@@ -40,6 +42,7 @@ script:
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
-  - moodle-plugin-ci grunt -t eslint:amd -t uglify
+  - moodle-plugin-ci grunt
+  - moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
